Playing with submodules

--- a/2010-11-18/index.html
+++ b/2010-11-18/index.html
@@ -524,6 +524,10 @@ http://blog.jquery.com/2010/10/16/jquery-143-released/
     <p>Another Paragraph</p>
     
   </section>
+  
+  <a href="test1.html">Test1.html</a>
+  <a href="test2.html">Test2.html</a>
+  <a href="test2.html?via=blah">Test2.html?via=blah</a>
 
 
     
